MDEV-6523 CONNECT temporary table created

check_engine() was not called for assisted discovery